# alfredo

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  LICENSE  README.md  alfredo.py  alfredo.spec  conf.py  dev-requirements.txt  fredo.spec  install  requirements.txt  setup.cfg  tox.ini
alfredo_types/: item.py
plugins/: base.py  search.py
src/alfredo/: alfredo.py  conf.py  core.py  main.py
src/alfredo/gui/: gui.py
src/alfredo/plugins/: apps.py  base.py  calculator.py  files.py  search.py
src/fredo/: conf.py  core.py  main.py
src/fredo/fredo_types/: item.py
src/fredo/gui/: gui.py  main.ini
src/fredo/plugins/: apps.py  base.py  calculator.py  files.py  search.py  utils.py
src/gui/: gui.py
src/plugins/: apps.py  files.py
tests/: conftest.py  test_sample.py
