[metadata]
name = fredo
version = 0.0.1
description = Alfred alternative for linux
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/thales-maciel-personal-projecs/alfredo
author = Thales Maciel
author_email = thales@thalesmaciel.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fredo=fredo.main:main
